# Friends-mates-

./: (observateur)main.c  election.c  election.h  gestiondesob.c  gestiondesob.h
election/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  election.glade.bak  election.gladep.bak  projet.txt
election/autom4te.cache/: output.1  requests  traces.0  traces.1
election/po/: Makefile  Makefile.in
election/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  electeur.txt  election  interface.c  interface.c.bak  interface.h.bak  liste_electorale.c  liste_electorale.h  main.c  projet.txt  tunisie.txt
gestion des elections/: election.c  election.h  main.c
gestiondesobservateurs/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  gestiondesobservateurs.glade.bak  gestiondesobservateurs.gladep.bak
gestiondesobservateurs/autom4te.cache/: output.0  requests  traces.0  traces.1
gestiondesobservateurs/po/: Makefile  Makefile.in
gestiondesobservateurs/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.h  main.c  ob.c  ob.h
observateur/: OBSERVATEUR.txt  main.c  makefile  obser.c  observateur.h  prog
project25/: Makefile  config.status  election.txt  project25.glade.bak
project25/autom4te.cache/: requests
project25/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  election.c  election.h  (+7 more)
projet3/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  projet3.glade.bak  projet3.gladep.bak
(+20 files in other folders)
